[package]
name = "socks5-impl"
version = "0.1.1"
authors = ["ssrlive <ssrlivebox@gmail.com>"]
description = "Fundamental abstractions and async read / write functions for SOCKS5 protocol and Relatively low-level asynchronized SOCKS5 server implementation based on tokio"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/ssrlive/socks5-impl"

[dependencies]
async-trait = "0.1.*"
byteorder = "1.4.*"
bytes = "1.3.*"
tokio = { version = "1.25.*", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1.25.*", features = ["macros", "rt-multi-thread"] }
